# quickvm

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  macos-release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: clipboard.rs  clipboard_files.rs  config.rs  main.rs  tray.rs
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs  macos.rs  windows.rs
crates/emulation/: Cargo.toml
crates/emulation/src/: lib.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/examples/: clip_probe.rs
crates/transport/src/: lib.rs
macos-app/: .gitignore  Makefile  Package.swift  README.md
macos-app/Resources/: AppIcon.icns  Info.plist
macos-app/Sources/QuicKVM/: MenuBar.swift  QuickVMController.swift  main.swift
macos-app/scripts/: generate-icon.py
scripts/: generate-icon.py
