[package]
name = "quickvm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
quickvm-capture = { version = "0.1.0", path = "../capture" }
quickvm-emulation = { version = "0.1.0", path = "../emulation" }
quickvm-event = { version = "0.1.0", path = "../event" }
quickvm-proto = { version = "0.1.0", path = "../proto" }
quickvm-transport = { version = "0.1.0", path = "../transport" }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
