[package]
name = "quickvm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
# default features 會拉整個 image stack（image-data）；只同步文字，不需要。
arboard = { version = "3", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
quickvm-capture = { version = "0.1.0", path = "../capture" }
quickvm-emulation = { version = "0.1.0", path = "../emulation" }
quickvm-event = { version = "0.1.0", path = "../event" }
quickvm-proto = { version = "0.1.0", path = "../proto" }
quickvm-transport = { version = "0.1.0", path = "../transport" }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# GUI subsystem 下接回父 console 用（見 main.rs attach_parent_console）。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }
