[package]
name = "quickvm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
# default features 會拉整個 image stack（image-data）；只同步文字，不需要。
arboard = { version = "3", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
quickvm-capture = { version = "0.1.0", path = "../capture" }
quickvm-emulation = { version = "0.1.0", path = "../emulation" }
quickvm-event = { version = "0.1.0", path = "../event" }
quickvm-proto = { version = "0.1.0", path = "../proto" }
quickvm-transport = { version = "0.1.0", path = "../transport" }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# GUI subsystem 下接回父 console（main.rs）+ CF_HDROP 檔案剪貼簿（clipboard_files.rs）
# + 系統匣常駐控制面（tray.rs：視窗類別 / 訊息迴圈 / popup menu / Shell_NotifyIcon）。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# Windows：build.rs 用它把 quickvm.ico 嵌進 exe（tray 圖示 + exe 圖示）。
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# 檔案剪貼簿（NSPasteboard file URLs，arboard 不支援 file list）。
# 版本對齊 enigo 既有的 objc2 生態，不增加重複編譯。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL", "NSEnumerator"] }
